# old-crash_investigator

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  ENVIRONMENT  README.md
docs/: crash_investigations.pptx
docs/notes/: notes_2021.11.27.txt  notes_2021.11.30.txt
include/crash_investigator/: alloc_free.h  callback.hpp  crash_investigator_internal_header.h  crash_investigator_malloc_free_hook.h
prj/common/common_mkfl/: crash_investigator.unix.common.Makefile  sys_common.unix.Makefile
prj/common/common_qt/: doocs_client_common.pri  doocs_server_common.pri  sys_common.pri
prj/common/common_vs/: crash_invest_common.props
prj/core/core_mkfl/: crash_investigator.unix.Makefile  crash_investigator_libs_common.unix.Makefile  crash_investigator_malloc.unix.Makefile  crash_investigator_new.unix.Makefile  crash_investigator_new_malloc.unix.Makefile
prj/core/core_qt/: crash_investigator.pri  crash_investigator_libs_common.pri  crash_investigator_malloc.pro  crash_investigator_new.pro  crash_investigator_new_malloc.pro  linux_simple.pro
prj/core/crash_investiator_new_malloc_vs/: cpp.hint  crash_investiator_new_malloc.sln  crash_investiator_new_malloc.vcxproj  crash_investiator_new_malloc.vcxproj.filters
prj/core/crash_investigator_qt/: crash_investigator.pri  crash_investigator.pro
prj/core/initial_malloc_free_vs/: initial_malloc_free.sln  initial_malloc_free.vcxproj  initial_malloc_free.vcxproj.filters
prj/core/wcs_server_qt/: wcs_server.pro
prj/crash_investigations/wcs_server_qt/: wcs_server.pro
prj/tests/addr2line_test_qt/: addr2line_test.pro
prj/tests/any_test_qt/: any_test.pro
prj/tests/double_free01_test_qt/: double_free01_test.pro
prj/tests/double_free01_test_vs/: double_free01_test.sln  double_free01_test.vcxproj  double_free01_test.vcxproj.filters
prj/tests/initial_malloc_free_vs/: initial_malloc_free.sln  initial_malloc_free.vcxproj  initial_malloc_free.vcxproj.filters
prj/tests/mc_weak_symbol_test01_vs/: mc_weak_symbol_test01.sln  mc_weak_symbol_test01.vcxproj  mc_weak_symbol_test01.vcxproj.filters
prj/tests/memory_leak01_test_qt/: memory_leak01_test.pro
prj/tests/memory_leak01_test_vs/: memory_leak01_test.sln  memory_leak01_test.vcxproj  memory_leak01_test.vcxproj.filters
prj/tests/second_malloc_free_vs/: second_malloc_free.sln  second_malloc_free.vcxproj  second_malloc_free.vcxproj.filters
scripts/: doocs_under_invest  run_under_invest
src/core/: crash_investigator_alloc_dealloc.cpp  crash_investigator_alloc_dealloc.hpp  crash_investigator_alloc_dealloc_analyze.cpp  crash_investigator_alloc_dealloc_unix.cpp  crash_investigator_alloc_dealloc_windows.cpp  crash_investigator_analyze_leaking.c  crash_investigator_malloc_free.cpp  crash_investigator_mallocn_freen.cpp  crash_investigator_mallocn_freen.hpp  crash_investigator_new_delete.cpp  crash_investigator_windows_missing_functions.cpp  crash_investigator_windows_missing_functions.h
src/core/analyze/: crash_investigator_analyze_leak_only_new_delete.cpp  crash_investigator_analyze_leak_only_new_delete_std_hash.cpp
src/core/backtrace/: crash_investigator_backtrace_unix.cpp  crash_investigator_backtrace_windows.cpp
src/core/basic/: crash_investigator_alloc_dealloc.hpp  crash_investigator_alloc_dealloc_analyze.cpp  crash_investigator_alloc_dealloc_unix.cpp  crash_investigator_alloc_dealloc_windows.cpp  crash_investigator_malloc_free.cpp  crash_investigator_new_delete.cpp  crash_investigator_windows_entry.c
src/core/initial_malloc_free_hook/: crash_investigator_malloc_free_hook_windows1.c  crash_investigator_malloc_free_hook_windows2.c
src/core/linux_simple/: CMakeLists.txt  crash_investigator_linux_simple_alloc_free.c  crash_investigator_linux_simple_alloc_free_inc.c  crash_investigator_linux_simple_analyze.c  crash_investigator_linux_simple_analyze.cpp
src/cpputilsm/: cpputilsm_hashitemsbyptr.cpp  cpputilsm_memorypool.cpp
src/tests/: main_addr2line_test.c  main_any_test.cpp  main_double_free01_test.cpp  main_mc_weak_symbol_test01.cpp  test_new_delete.cpp
src/utils/: crash_investigator_overall.cpp
workspaces/crash_investigator_all_qt/: crash_investigator_all.pro
workspaces/crash_investigator_all_vs/: crash_investigator_all.sln  crash_investigator_all.vcxproj  crash_investigator_all.vcxproj.filters
(+11 files in other folders)
